[package]
name = "static-http-cache"
version = "0.4.0" # remember to update html_root_url
authors = ["Tim Allen <screwtape@froup.com>"]
description = "A local cache for static HTTP resources"
license = "MIT"
repository = "https://gitlab.com/Screwtapello/static_http_cache"
readme = "README.md"
keywords = ["http", "cache"]
categories = ["caching", "network-programming", "web-programming::http-client"]
edition = "2018"

[dependencies]
log = "0.4.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
sqlite = "0.26"
rand = "0.8"
thiserror = "1.0"
http = "0.2.4"
httpdate = "1.0.1"

[dev-dependencies]
tempdir = "0.3.5"
env_logger = "0.8.4"
